--- a/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/mean-course/src/app/posts/post-create/post-create.component.html
@@ -1,4 +1,4 @@
-<textarea name="" id="" rows="6">{{ newPost }}</textarea>
+<textarea rows="6" [value]="newPost"></textarea>
 <hr>
 <button (click)="onAddPost()">Save Post</button>
 <p>{{ newPost }}</p>
