--- a/mean-course/src/app/app.component.html
+++ b/mean-course/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>Our First App</h1>
-<app-post-create></app-post-create>
+<app-header></app-header>
+<main>
+  <app-post-create></app-post-create>
+</main>
+
 
 
