--- a/mean-course/src/app/posts/post-list/post-list.component.html
+++ b/mean-course/src/app/posts/post-list/post-list.component.html
@@ -1,8 +1,8 @@
-<mat-accordion>
-  <mat-expansion-panel>
+<mat-accordion multi=True>
+  <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
-    Expansion panel title.
+    {{ post.title }}
     </mat-expansion-panel-header>
-    <p>I'm in an expansion panel!</p>
+    <p>{{ post.content }}</p>
   </mat-expansion-panel>
 </mat-accordion>
